<?xml version="1.0"?>
<package format="2">
  <name>gs_cases</name>
  <version>1.5.0</version>
  <description>The gs_cases package</description>

  <maintainer email="ilya@eadsoft.com">Ilya Danilenko</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
